<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.liyang.getshbayimage.ToutiaoActivity" >
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/menu_24px"
        android:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/back"
        app:showAsAction="ifRoom"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/back"
        app:showAsAction="ifRoom"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/back"
        app:showAsAction="never"
        android:title="@string/setting">
    </item>

</menu>